--- a/DDCharacterSheet/index.html
+++ b/DDCharacterSheet/index.html
@@ -28,6 +28,7 @@
     <script src="app/apps/characterSheet/characterSheetApp.config.js"></script>
     <!--Factories-->
     <script src="app/apps/characterSheet/helpers/characterCreateHelper.js"></script>
+    <script src="app/apps/characterSheet/helpers/traitHelper.js"></script>
     <!--Controllers-->
     <script src="app/apps/characterSheet/home/homeController.js"></script>
     <script src="app/apps/characterSheet/home/settings/settingsController.js"></script>
@@ -36,6 +37,11 @@
     <script src="app/apps/characterSheet/home/add/characterStart/characterStartController.js"></script>
     <script src="app/apps/characterSheet/home/add/chooseClass/chooseClassController.js"></script>
     <script src="app/apps/characterSheet/home/add/chooseRace/chooseRaceController.js"></script>
+    <script src="app/apps/characterSheet/home/add/chooseBackground/chooseBackgroundController.js"></script>
+    <script src="app/apps/characterSheet/home/add/finalizeCharacter/finalizeCharacterController.js"></script>
+
+    <!--Dialog Controllers-->
+    <script src="app/apps/characterSheet/home/add/chooseBackground/traitPicker/traitPickerController.js"></script>
 </head>
 <body>
   <md-content ui-view layout="row" style="height:100%; width:100%;"></md-content>
