Some stuff I forgot

--- a/DDCharacterSheet/app/apps/characterSheet/login/loginView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/login/loginView.html
@@ -1,3 +1,3 @@
-﻿<md-button class="md-primary md-raised" ng-click="LoginVC.Login()">
+﻿<md-button class="md-primary md-raised" ng-click="LoginVC.Login('TST-USER', 'TST-PSSWRD', true)">
     Login
 </md-button>
