--- a/DDCharacterSheet/app/apps/characterSheet/home/add/chooseBackground/traitPicker/traitPickerView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/home/add/chooseBackground/traitPicker/traitPickerView.html
@@ -7,7 +7,7 @@
             </md-button>
         </div>
     </md-toolbar>
-    <md-dialog-content>
+    <md-dialog-content style="padding:15px;">
         <div layout="column" layout-align="center center">
             <md-input-container ng-if="TraitPickerVC.Trait.SpecialtyName" style="width:100%;">
                 <label>{{TraitPickerVC.Trait.SpecialtyName}}</label>
