--- a/DDCharacterSheet/app/apps/characterSheet/home/add/finalizeCharacter/finalizeCharacterView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/home/add/finalizeCharacter/finalizeCharacterView.html
@@ -8,6 +8,9 @@
             <div class="md-media-lg card-media"></div>
         </md-card-title-media>
     </md-card-title>
+    <md-card-content>
+
+    </md-card-content>
     <md-card-actions layout="row" layout-align="end center">
         <md-button>Reset</md-button>
         <md-button>Action 2</md-button>
