Some minor Wizard of Oz framework for the presentation tomorrow!

--- a/DDCharacterSheet/app/apps/characterSheet/home/characters/charactersView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/home/characters/charactersView.html
@@ -23,7 +23,7 @@
                 <md-button class="md-icon-button md-primary">
                     <md-icon>play_circle_filled</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-primary">
+                <md-button class="md-icon-button md-primary" ng-click="CharactersVC.Share(character)">
                     <md-icon>share</md-icon>
                 </md-button>
                 <md-button ng-click="CharactersVC.Delete($index)" class="md-icon-button md-warn">
@@ -53,10 +53,10 @@
                 <md-button class="md-icon-button md-primary">
                     <md-icon>play_circle_filled</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-primary">
+                <md-button class="md-icon-button md-primary" ng-click="CharactersVC.Share(character)">
                     <md-icon>share</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-warn">
+                <md-button class="md-icon-button md-warn" ng-click="CharactersVC.Delete($index)">
                     <md-icon>delete</md-icon>
                 </md-button>
             </md-card-actions>
@@ -83,10 +83,10 @@
                 <md-button class="md-icon-button md-primary">
                     <md-icon>play_circle_filled</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-primary">
+                <md-button class="md-icon-button md-primary" ng-click="CharactersVC.Share(character)">
                     <md-icon>share</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-warn">
+                <md-button class="md-icon-button md-warn" ng-click="CharactersVC.Delete($index)">
                     <md-icon>delete</md-icon>
                 </md-button>
             </md-card-actions>
@@ -113,10 +113,10 @@
                 <md-button class="md-icon-button md-primary">
                     <md-icon>play_circle_filled</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-primary">
+                <md-button class="md-icon-button md-primary" ng-click="CharactersVC.Share(character)">
                     <md-icon>share</md-icon>
                 </md-button>
-                <md-button class="md-icon-button md-warn">
+                <md-button class="md-icon-button md-warn" ng-click="CharactersVC.Delete($index)">
                     <md-icon>delete</md-icon>
                 </md-button>
             </md-card-actions>
