added signup button functionality

--- a/DDCharacterSheet/app/apps/characterSheet/login/loginView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/login/loginView.html
@@ -22,7 +22,7 @@
                 <input type="password">
             </md-input-container>
             <div layout = "row">
-                <md-button class = "md-primary md-raised"> Sign Up</md-button>
+                <md-button class = "md-primary md-raised" ng-click = "LoginVC.SignUp()"> Sign Up</md-button>
                 <md-button class = "md-primary md-raised" ng-click = "LoginVC.Login('TST-USER', 'TST-PSSWRD', true)">
                     Login
                 </md-button>
