signup page updated

--- a/DDCharacterSheet/app/apps/characterSheet/login/signUp/signUpView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/login/signUp/signUpView.html
@@ -1,1 +1,25 @@
-<h1> Test</h1>
+<style>
+  .content{
+    height: 100%;
+    width: 100%;
+  }
+</style>
+<div class = "content" layout = "column" layout-align = "center center">
+  <md-card style = "padding: 15px">
+    <md-toolbar>
+      <div class = "md-toolbar-tools">
+        <h2> D&D Character Creator Sign-Up</h2>
+      </div>
+    </md-toolbar>
+    <div layout = "column" layout-align = "center center">
+      <md-input-container>
+        <label> Username</label>
+        <input>
+      </md-input-container>
+      <md-input-container>
+        <label> Password</label>
+        <input>
+      </md-input-container>
+    </div>
+  </md-card>
+</div>
