Commit for services for the WebAPI changes.

--- a/DDCharacterSheet/index.html
+++ b/DDCharacterSheet/index.html
@@ -48,6 +48,10 @@
     <script src="app/apps/characterSheet/home/add/chooseBackground/traitPicker/traitPickerController.js"></script>
     <!--Services-->
     <script src="app/apps/characterSheet/services/CharacterSheetWebAPI/accessTokenService.js"></script>
+    <script src="app/apps/characterSheet/services/CharacterSheetWebAPI/charactersService.js"></script>
+    <script src="app/apps/characterSheet/services/CharacterSheetWebAPI/classesService.js"></script>
+    <script src="app/apps/characterSheet/services/CharacterSheetWebAPI/racesService.js"></script>
+    <script src="app/apps/characterSheet/services/CharacterSheetWebAPI/traitsService.js"></script>
 </head>
 <body>
     <md-content layout="row" ui-view style="height:100%; width:100%;"></md-content>
