registered signup controller

--- a/DDCharacterSheet/index.html
+++ b/DDCharacterSheet/index.html
@@ -34,6 +34,7 @@
     <script src="app/apps/characterSheet/helpers/traitHelper.js"></script>
     <!--Login Scripts-->
     <script src="app/apps/characterSheet/login/loginController.js"></script>
+    <script src = "app/apps/characterSheet/login/signUp/signUpController.js"></script>
     <!--Controllers-->
     <script src="app/apps/characterSheet/home/homeController.js"></script>
     <script src="app/apps/characterSheet/home/settings/settingsController.js"></script>
