--- a/DDCharacterSheet/app/apps/characterSheet/login/signUp/signUpView.html
+++ b/DDCharacterSheet/app/apps/characterSheet/login/signUp/signUpView.html
@@ -3,6 +3,11 @@
     height: 100%;
     width: 100%;
   }
+
+  md-input-container{
+    margin: 15px 5px 0 5px;
+    padding: 5px;
+  }
 </style>
 <div class = "content" layout = "column" layout-align = "center center">
   <md-card style = "padding: 15px">
@@ -12,14 +17,34 @@
       </div>
     </md-toolbar>
     <div layout = "column" layout-align = "center center">
-      <md-input-container>
-        <label> Username</label>
-        <input>
-      </md-input-container>
-      <md-input-container>
-        <label> Password</label>
-        <input>
-      </md-input-container>
+      <div layout = "row">
+        <md-input-container>
+          <label> Username</label>
+          <input>
+        </md-input-container>
+        <md-input-container>
+          <label> Email</label>
+          <input>
+        </md-input-container>
+      </div>
+      <div layout = "row">
+        <md-input-container>
+          <label> Password</label>
+          <input>
+        </md-input-container>
+        <md-input-container>
+          <label> Confirm Password</label>
+          <input>
+        </md-input-container>
+      </div>
+      <div layout = "row">
+        <md-button
+          class = "md-primary md-raised"
+          ng-click = "SignUpVC.SignUp()"> Submit</md-button>
+        <md-button
+          class = "md-primary md-raised"
+          ng-click = "SignUpVC.Back()"> Back</md-button> 
+      </div>
     </div>
   </md-card>
 </div>
